--- a/Cofy.IncomeTaxCalculator.API/appsettings.Development.json
+++ b/Cofy.IncomeTaxCalculator.API/appsettings.Development.json
@@ -8,5 +8,8 @@
   "BasicAuthentication": {
     "UserName": "CofyAdm",
     "Password": "Cofy!@#123"
+  },
+  "ConnectionStrings": {
+    "Database": "Data Source=localhost; Initial Catalog=CofyDB; User Id=sa; Password=Horizon123456;TrustServerCertificate=yes;"
   }
 }
