--- a/Cofy.IncomeTaxCalculator.Application/Cofy.IncomeTaxCalculator.Application.csproj
+++ b/Cofy.IncomeTaxCalculator.Application/Cofy.IncomeTaxCalculator.Application.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="MediatR" Version="12.4.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Cofy.IncomeTaxCalculator.Data\Cofy.IncomeTaxCalculator.Data.csproj" />
+  </ItemGroup>
+
 </Project>
