--- a/Cofy.IncomeTaxCalculator.Tests/Cofy.IncomeTaxCalculator.Tests.csproj
+++ b/Cofy.IncomeTaxCalculator.Tests/Cofy.IncomeTaxCalculator.Tests.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="FluentAssertions" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.32" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="MockQueryable.NSubstitute" Version="7.0.3" />
     <PackageReference Include="NSubstitute" Version="5.3.0" />
     <PackageReference Include="NUnit" Version="3.14.0" />
     <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
